Merge pull request #207 from SrRapero720/1.20
Implemented GuiIcon, GuiSeekBar and ValueFormatter + code cleanup and optimization